# mcp-searxng

./: .gitignore  Cargo.toml  README.md
.github/workflows/: audit.yaml  build.yaml  check.yaml  lint.yaml  test.yaml  workflow.yaml
src/: config.rs  http_client.rs  main.rs  mcp_server.rs  model.rs  query_builder.rs  search_service.rs
